# fp2023

./: .gitignore  README.md  exam.md
DSyresenkov/: README.md
DSyresenkov/demos/: demoCPSFact.ml  demoCPSFact.t  demoFact.t  demoFactParse.ml  demoFactParse.t  demoFacts.ml  demoFacts.t  demoLists.ml  demoLists.t  demoTest.ml  demoTest.t  dune
DSyresenkov/lib/: ast.ml  ast.mli  dune  infer.ml  infer.mli  interpret.ml  interpret.mli  parser.ml  parser.mli  tests.ml  tests.mli  typing.ml  typing.mli
Go/: Go.opam  REPL.ml  dune  dune-project
Go/demos/: demoAO.ml  demoNO.ml  demoParse.ml  dune
Go/lib/: ast.ml  ast.mli  binded_ast.ml  binder.ml  dune  monades.ml  parser.ml  parser.mli  tests.ml
LLVM_IR/lib/: dune
MiniML/: README.md  dune  dune-project
MiniML/lib/: ast.mli  dune  tests.ml
OCamlWithWeakTypeVariables/: OCamlWithWeakTypeVariables.opam  aww_dang_it.md  dune  dune-project
OCamlWithWeakTypeVariables/demos/: demoInterpret.ml  demoInterpret.t  demoParse.ml  demoParse.t  dune
OCamlWithWeakTypeVariables/lib/: ast.ml  ast.mli  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  tests.ml  tests.mli  types.mli
Ocaml+ADT/: Ocaml+ADT.opam  dune-project
Ocaml+ADT/demos/: demoFact.ml  demoFact.t  demoInference.ml  demoInference.t  demoInterpret.ml  demoInterpret.t  demoParse.ml  demoParse.t  dune
Ocaml+ADT/lib/: ast.ml  dune  inferencer.ml  inferencerTypes.ml  interpreter.ml  interpreterResultPrinter.ml  interpreterTypes.ml  parser.ml
Ocaml+ADT/lib/tests/: inferencerTests.ml  interpreterTests.ml  parserTests.ml
OcamlOOP/: OcamlOOP.opam  dune-project
OcamlOOP/demo/: dune
OcamlOOP/demos/: demo.ml  demo_err.t  demo_expr.t  demo_fact.ml  demo_list.t  demo_obj.ml  demo_obj.t  demo_obj1.ml  demo_rec.t  demo_row_poly.t  dune  test.t
OcamlOOP/lib/: ast.ml  dune  errors.ml  errors.mli  infer.ml  infer_tests.ml  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  pp_infer.ml  pp_infer.mli  typedtree.ml
OcamlOOP/tests/: dune  infer_tests.ml  interpreter_tests.ml  parser_tests.ml
Python/demos/: adding_class_to_env_test.ml  anon_func_test.ml  change_func_test.ml  change_print_test.ml  demo_fact.ml  dune  interpreter_fact_test.ml  logic_test.ml  method_call_test.ml  parse_and_interpret_fact_test.ml  string_interpolation_test.ml  test.t
Python/lib/: ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli
Ruby/: Ruby.opam  Ruby.opam.template
Ruby/demos/: demoInterpreter.ml  demoInterpreter.t  demoParser.ml  demoParser.t  dune
Ruby/examples/: anonymous.rb  closure.rb  method_missing.rb  multiple_assignment.rb  object.rb  recursion.rb  testpars.rb
Ruby/lib/: ast.ml  dune  interpret.ml  interpret.mli  parser.ml  parser.mli
