(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Nikita Lukonenko")

(maintainers "Nikita Lukonenko")

(package
 (name Go) ;regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for Golang language")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  base
  After adding dependencies to 'dune' files and the same dependecies here too
  ))