(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Dmitry Shestakov")

(maintainers "Dmitry Shestakov")

(bug_reports "https://github.com/wokuparalyzed/fp2023/issues")

(homepage "https://github.com/wokuparalyzed/fp2023")

(package
 (name OCamlWithWeakTypeVariables)
 (synopsis "OCaml with weak type variables")
 (description "OCaml with weak type variables support (not really)")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)))
