(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Artem-Rzhankoff")

(maintainers "Artem-Rzhankoff")

(bug_reports "https://t.me/arty0m_1982")

(homepage "https://github.com/Artem-Rzhankoff/fp2023")

(package
 (name OcamlOOP)
 (synopsis "An interpreter for OCamlOOP")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
