(executable
 (name demoFact)
 (modules demoFact)
 (public_name demoFact)
 (libraries miniml_lib)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name demoCPSFact)
 (modules demoCPSFact)
 (public_name demoCPSFact)
 (libraries miniml_lib)
 (instrumentation
  (backend bisect_ppx)))


(cram
 (deps %{bin:demoFact}))

(cram
 (deps %{bin:demoCPSFact}))
