(library
 (name Go_lib)
 (public_name Go.Lib)
 (modules Ast Lambda Interpret Parser Printast Pprintast utils)
 (inline_tests)
 (modules_without_implementation ast)
 (libraries base angstrom)
 (preprocess
  (pps ppx_deriving.show ppx_inline_test))
 (instrumentation
  (backend bisect_ppx)))

(library
 (name tests)
 (modules tests)
 (libraries Go_lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
