(executable
 (name demoInterpret)
 (modules demoInterpret)
 (public_name demoInterpret)
 (libraries OCamlWithWeakTypeVariables stdio)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps ./demoInterpret.exe))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries OCamlWithWeakTypeVariables stdio)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps ./demoParse.exe))
