(library
 (name OCamlWithWeakTypeVariables)
 (public_name OCamlWithWeakTypeVariables.Lib)
 (modules parser ast types inferencer interpreter)
 (modules_without_implementation types)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (libraries angstrom base)
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))

(library
 (name tests)
 (modules tests)
 (libraries OCamlWithWeakTypeVariables)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
