(env
 (dev
  (flags
   (:standard -warn-error -A -w -3-9-32-34-58)))
 (release
  (flags
   (:standard -warn-error -A -w -58))))

(executable
 (name demo)
 (public_name demo)
 (modules demo)
 (libraries OcamlOOP.Lib stdio)
 (preprocess
  (pps ppx_show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps %{bin:demo}))
